--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "mongojs": "^2.5.0",
     "mongoose": "^5.0.6",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "passport-http-oauth": "^0.1.3",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5"
   }
 }
